--- a/templates/error.html
+++ b/templates/error.html
@@ -9,14 +9,7 @@
 </head>
 <body>
     <div class="result">
-        <img src="{{image}}" class="upload-image" width="100" height="50"/>
-        <p>{{arabic_text}}</p>
-        <p>{{word_after_noon_sakin}}</p>
-        <p>{{tajweed_law}}</p>
-        <audio controls>
-            <source src="{{sound_how_to_read}}" type="audio/mpeg">
-            Browser tidak mendukung tag audio
-        </audio>
+        <p>Tidak ada gambar atau gambar tidak terdeteksi</p>
         <button onclick="window.location.href='/'" class="btn">Selesai</button>
     </div>
 </body>
