--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules Of Tajweed</title>
     <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" href="static/logo.png">
 </head>
 <body>
     <form action="/upload-image-base64-web" method="post" enctype="multipart/form-data">
