Error Page Update

--- a/templates/error.html
+++ b/templates/error.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="static/logo.png">
 </head>
 <body>
-    <div class="result">
-        <p>Tidak ada gambar atau gambar tidak terdeteksi</p>
+    <div class="center">
+        <p>Gambar tidak terdeteksi</p>
         <button onclick="window.location.href='/'" class="btn">Selesai</button>
     </div>
 </body>
