--- a/templates/result.html
+++ b/templates/result.html
@@ -8,16 +8,19 @@
     <link rel="icon" href="static/logo.png">
 </head>
 <body>
-    <div class="result">
-        <img src="{{image}}" class="upload-image" width="100" height="50"/>
-        <p>{{arabic_text}}</p>
-        <p>{{word_after_noon_sakin}}</p>
-        <p>{{tajweed_law}}</p>
-        <audio controls>
-            <source src="{{sound_how_to_read}}" type="audio/mpeg">
-            Browser tidak mendukung tag audio
-        </audio>
-        <button onclick="window.location.href='/'" class="btn">Selesai</button>
-    </div>
+    <form action="/delete" method="post">
+        <div class="result">
+            <img src="{{image}}" class="upload-image" width="100" height="50"/>
+            <p>{{arabic_text}}</p>
+            <p>{{word_after_noon_sakin}}</p>
+            <p>{{tajweed_law}}</p>
+            <audio controls>
+                <source src="{{sound_how_to_read}}" type="audio/mpeg">
+                Browser tidak mendukung tag audio
+            </audio>
+            <button type="submit" class="btn" name="uploadbutton">Selesai</button>
+        </div>
+        <input type="hidden" name="filename" value="{{image}}"/>
+    </form>
 </body>
 </html>
